Mon Jan 19 16:30:53 2004  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_time.rb: added tests for [ruby-dev:22614] and
	  [ruby-dev:22617].

Mon Jan 19 13:09:21 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/extmk.rb, win32/Makefile.sub, win32/configure.bat,
	  win32/setup.mak: --with-static-linked-ext support on mswin32.

Mon Jan 19 06:49:07 2004  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: zone was wrong when it was behind UTC.
	  Thanks Mark J. Reed.

	* lib/date/format.rb: %z is now always replaced by four digits
	  with a leading plus or minus sign.

	* sample/cal.rb: added a class, anyway.

Sun Jan 18 23:59:44 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/charset_alias.rb: prefer us_EN locale encodings or
	  former.  [ruby-dev:22609]

	* ext/iconv/iconv.c (iconv_create): raise InvalidEncoding
	  exception when EINVAL.

Sun Jan 18 23:16:34 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c, error.c, file.c, io.c, numeric.c, object.c, re.c, struct.c,
	  time.c: marked init_copy functions nodoc.

Sun Jan 18 20:47:35 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ruby.c: use translate_char() on Cygwin.

Sun Jan 18 20:00:16 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/soap/wsdlDriver.rb, lib/wsdl/soap/operation.rb: add support of
	  "parts" attribute of soap:body element in WSDL.

	* lib/wsdl/xmlSchema/schema.rb: friendly warning message for
	  simpleType element which is not supported for now.

	* test/wsdl/soap/{soapbodyparts.wsdl,test_soapbodyparts.wsdl}: new
	  files.

Sun Jan 18 16:46:48 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_overflow_p): should return results.  [ruby-dev:22614]

Sun Jan 18 12:07:24 2004  Siena.  <siena@faculty.chiba-u.jp>

	* test/ruby/test_time.rb: new test case to test Time#[+-].

	* time.c (time_plus, time_minus): fix RangeError for a negative
	  argument in environments whose time_t is unsigned. [ruby-dev:22608]
